--- a/README
+++ b/README
@@ -1,7 +1,5 @@
-[![FOSSA Status](https://app.fossa.com/api/projects/git%2Bgithub.com%2FZylint%2Flinuxify.svg?type=shield)](https://app.fossa.com/projects/git%2Bgithub.com%2FZylint%2Flinuxify?ref=badge_shield)
-
-This repository is open to community contributions but forbids forking, redistribution, or any commercial use. Contributions are subject to approval and owned by the repository maintainer
-
+This repository is open to community contributions but does not allow forking, redistribution, or commercial use. Contributions are subject to approval and are owned by the repository maintainer.
 
 ## License
+
 [![FOSSA Status](https://app.fossa.com/api/projects/git%2Bgithub.com%2FZylint%2Flinuxify.svg?type=large)](https://app.fossa.com/projects/git%2Bgithub.com%2FZylint%2Flinuxify?ref=badge_large)
