--- a/README
+++ b/README
@@ -2,4 +2,6 @@ This repository is open to community contributions but does not allow forking, r
 
 ## License
 
+[![FOSSA Status](https://app.fossa.com/api/projects/git%2Bgithub.com%2FZylint%2Flinuxify.svg?type=shield)](https://app.fossa.com/projects/git%2Bgithub.com%2FZylint%2Flinuxify?ref=badge_shield)
+
 [![FOSSA Status](https://app.fossa.com/api/projects/git%2Bgithub.com%2FZylint%2Flinuxify.svg?type=large)](https://app.fossa.com/projects/git%2Bgithub.com%2FZylint%2Flinuxify?ref=badge_large)
