--- a/README
+++ b/README
@@ -1,7 +1,8 @@
-This repository is open to community contributions but does not allow forking, redistribution, or commercial use. Contributions are subject to approval and are owned by the repository maintainer.
 
-## License
+This repository is open to community contributions but does not allow forking, redistribution, or commercial use. Contributions are subject to approval and are owned by the repository maintainer
 
-[![FOSSA Status](https://app.fossa.com/api/projects/git%2Bgithub.com%2FZylint%2Flinuxify.svg?type=shield)](https://app.fossa.com/projects/git%2Bgithub.com%2FZylint%2Flinuxify?ref=badge_shield)
+## FOSSA
 
-[![FOSSA Status](https://app.fossa.com/api/projects/git%2Bgithub.com%2FZylint%2Flinuxify.svg?type=large)](https://app.fossa.com/projects/git%2Bgithub.com%2FZylint%2Flinuxify?ref=badge_large)
+[![FOSSA Status](https://app.fossa.com/api/projects/git%2Bgithub.com%2FZylint%2Flinuxify.svg?type=shield&issueType=license)](https://app.fossa.com/projects/git%2Bgithub.com%2FZylint%2Flinuxify?ref=badge_shield&issueType=license)
+
+[![FOSSA Status](https://app.fossa.com/api/projects/git%2Bgithub.com%2FZylint%2Flinuxify.svg?type=shield&issueType=security)](https://app.fossa.com/projects/git%2Bgithub.com%2FZylint%2Flinuxify?ref=badge_shield&issueType=security)
